--- a/src/components/reviews-full.astro
+++ b/src/components/reviews-full.astro
@@ -4,7 +4,11 @@ import ThumbtackReviews from "@components/reviews-thumbtack.astro";
 
 import "components/css-components/style-reviews-full.css";
 ---
-<!-- pause 
+
+
+
+
+
 <div class="page-reviews">
   <h2>Real Customer Reviews From Our Google and Thumbtack Profile</h2>
 
@@ -71,10 +75,10 @@ import "components/css-components/style-reviews-full.css";
     <button class="load-more" id="load-more-graphic_arts">Load More</button>
   </div>
 </div>
--->
+
 
 <!-- кнопка Load More показ более 8 элементов -->
-<!-- <script defer>
+<script defer>
   document.addEventListener("DOMContentLoaded", function () {
     function setupReviewLoading(containerId, buttonId) {
       const reviewsContainer = document.getElementById(containerId);
@@ -106,10 +110,10 @@ import "components/css-components/style-reviews-full.css";
     setupReviewLoading("video_editing", "load-more-video_editing");
     setupReviewLoading("graphic_arts", "load-more-graphic_arts");
   });
-</script> -->
+</script>
 
 <!-- переключение по вкладкам верхнего меню  reviews-->
-<!-- <script defer>
+<script defer>
   document.addEventListener("DOMContentLoaded", function () {
     const d3model = document.getElementById("d3_model");
     const videoediting = document.getElementById("video_editing");
@@ -157,14 +161,14 @@ import "components/css-components/style-reviews-full.css";
       document.querySelector(selector).classList.toggle(className);
     }
   });
-</script> -->
+</script>
 
 <!-- показать больше Read More -->
-<!-- <script defer>
+<script defer>
   let more = document.querySelectorAll(".more");
   for (let i = 0; i < more.length; i++) {
     more[i].addEventListener("click", function () {
       more[i].parentNode.classList.toggle("comment-active");
     });
   }
-</script> -->
+</script>
