--- a/src/components/reviews-google.astro
+++ b/src/components/reviews-google.astro
@@ -42,10 +42,10 @@ import "components/css-components/style-reviews-full.css";
         <button class="more" title="Read More"><p>...</p></button>
         
 
-        <div class="google-b">
+        <div class="google-b  google-b-webp ">
           <a 
             href="https://www.google.com/maps/reviews/data=!4m8!14m7!1m6!2m5!1sChdDSUhNMG9nS0VJQ0FnSUNMN3F1bF9RRRAB!2m1!1s0x0:0xb55366eeca414210!3m1!1s2@1:CIHM0ogKEICAgICL7qul_QE%7CCgwI4vTKswYQgPzZlwE%7C">
-            <img  loading="lazy"  src="/svg/google.svg" alt="google"/>
+            <img  loading="lazy"  src="/svg/google.webp" alt="google"/>
                  
           </a>
         </div>
@@ -92,10 +92,10 @@ import "components/css-components/style-reviews-full.css";
           </p>
         </div>
         <button class="more" title="Read More"><p>...</p></button>
-        <div class="google-b">
+        <div class="google-b  google-b-webp">
           <a
             href="https://www.google.com/maps/reviews/data=!4m8!14m7!1m6!2m5!1sChdDSUhNMG9nS0VJQ0FnSUNqc0w2cGdnRRAB!2m1!1s0x0:0xb55366eeca414210!3m1!1s2@1:CIHM0ogKEICAgICjsL6pggE%7CCgwIhtP8sAYQoIGGogM%7C">
-            <img  loading="lazy"  src="/svg/google.svg" alt="google"/>
+            <img  loading="lazy"  src="/svg/google.webp" alt="google"/>
              
           </a>
         </div>
@@ -142,10 +142,10 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <button class="more" title="Read More"><p>...</p></button>
 
-        <div class="google-b">
+        <div class="google-b  google-b-webp">
           <a
             href="https://www.google.com/maps/reviews/data=!4m8!14m7!1m6!2m5!1sChdDSUhNMG9nS0VJQ0FnSUNqOE4yTWpnRRAB!2m1!1s0x0:0xb55366eeca414210!3m1!1s2@1:CIHM0ogKEICAgICj8N2MjgE%7CCgwI46j9sAYQsOvxnQE%7C">
-            <img  loading="lazy"  src="/svg/google.svg" alt="google"/>
+            <img  loading="lazy"  src="/svg/google.webp" alt="google"/>
              
           </a>
         </div>
@@ -193,10 +193,10 @@ import "components/css-components/style-reviews-full.css";
           </p>
         </div>
         <button class="more" title="Read More"><p>...</p></button>
-        <div class="google-b">
+        <div class="google-b  google-b-webp">
           <a
             href="https://www.google.com/maps/reviews/data=!4m8!14m7!1m6!2m5!1sChZDSUhNMG9nS0VJQ0FnSUNqdU12ZUtREAE!2m1!1s0x0:0xb55366eeca414210!3m1!1s2@1:CIHM0ogKEICAgICjuMveKQ%7CCgwI0--AsQYQ2KrisQE%7C">
-            <img  loading="lazy"  src="/svg/google.svg" alt="google"/>
+            <img  loading="lazy"  src="/svg/google.webp" alt="google"/>
              
           </a>
         </div>
@@ -243,10 +243,10 @@ import "components/css-components/style-reviews-full.css";
           </p>
         </div>
         <button class="more" title="Read More"><p>...</p></button>
-        <div class="google-b">
+        <div class="google-b  google-b-webp">
           <a
             href="https://www.google.com/maps/reviews/@34.020479,-118.5344575,17z/data=!3m1!4b1!4m6!14m5!1m4!2m3!1sChdDSUhNMG9nS0VJQ0FnSUNENC1iYzRRRRAB!2m1!1s0x0:0xb55366eeca414210?entry=ttu">
-            <img  loading="lazy"  src="/svg/google.svg" alt="google"/>
+            <img  loading="lazy"  src="/svg/google.webp" alt="google"/>
              
           </a>
         </div>
@@ -292,10 +292,10 @@ import "components/css-components/style-reviews-full.css";
           </p>
         </div>
         <button class="more" title="Read More"><p>...</p></button>
-        <div class="google-b">
+        <div class="google-b  google-b-webp">
           <a
             href="https://www.google.com/maps/reviews/@34.020479,-118.5344575,17z/data=!3m1!4b1!4m6!14m5!1m4!2m3!1sChdDSUhNMG9nS0VJQ0FnSUNEMzVYSDB3RRAB!2m1!1s0x0:0xb55366eeca414210?entry=ttu">
-            <img  loading="lazy"  src="/svg/google.svg" alt="google"/>
+            <img  loading="lazy"  src="/svg/google.webp" alt="google"/>
              
           </a>
         </div>
@@ -341,10 +341,10 @@ import "components/css-components/style-reviews-full.css";
         </div>
         <button class="more" title="Read More"><p>...</p></button>
 
-        <div class="google-b">
+        <div class="google-b  google-b-webp">
           <a
             href="https://www.google.com/maps/reviews/@34.020479,-118.5344575,17z/data=!3m1!4b1!4m6!14m5!1m4!2m3!1sChZDSUhNMG9nS0VJQ0FnSUQ5X19XQ2FBEAE!2m1!1s0x0:0xb55366eeca414210?entry=ttu">
-            <img  loading="lazy"  src="/svg/google.svg" alt="google"/>
+            <img  loading="lazy"  src="/svg/google.webp" alt="google"/>
              
           </a>
         </div>
@@ -390,10 +390,10 @@ import "components/css-components/style-reviews-full.css";
           </p>
         </div>
         <button class="more" title="Read More"><p>...</p></button>
-        <div class="google-b">
+        <div class="google-b  google-b-webp">
           <a
             href="https://www.google.com/maps/reviews/@34.020479,-118.5344575,17z/data=!3m1!4b1!4m6!14m5!1m4!2m3!1sChZDSUhNMG9nS0VJQ0FnSUQ5Xzh1bVRBEAE!2m1!1s0x0:0xb55366eeca414210?entry=ttu">
-            <img  loading="lazy"  src="/svg/google.svg" alt="google"/>
+            <img  loading="lazy"  src="/svg/google.webp" alt="google"/>
              
           </a>
         </div>
