--- a/src/pages/services/commercial-refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/commercial-refrigerator-repair-los-angeles.astro
@@ -1,6 +1,7 @@
 ---
 import Container from "@components/container.astro";
-import Cta from "@components/cta.astro";
+// import Cta from "@components/cta.astro";
+import CtaTestReviews from "@components/cta-test-reviews.astro"
 import Contactbtn from "@components/contactbtn.astro";
 import Features from "@components/features.astro";
 import Hero from "@components/hero.astro";
@@ -219,4 +220,5 @@ import "css/service/style_services.css";
     </div>
   </Container>
 </Layout>
-<Cta />
+<CtaTestReviews />
+<!-- <Cta /> -->
