--- a/src/pages/services/commercial-dryer-repair-los-angeles.astro
+++ b/src/pages/services/commercial-dryer-repair-los-angeles.astro
@@ -35,7 +35,7 @@ import "css/service/style_services.css";
         <div class="page-header-f">
           <img
             src="/commercial-dryer/commercial-dryer-page_header_photos.webp"
-            alt="Commercial Dryer Repair"
+            alt="Commercial Dryer Repair Los Angeles"
             loading="lazy"
           />
         </div>
