--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -2,6 +2,8 @@
 import Link from "./ui/link.astro";
 import { Icon } from "astro-icon";
 import Btn from "@components/btn.astro";
+
+
 import "@components/css-components/footer-cta.css";
 // import ReviewsFull from "@components/reviews-full.astro";
 ---
@@ -71,7 +73,9 @@ import "@components/css-components/footer-cta.css";
 
   <footer>
     <div class="full-footer">
+
       <div class="button-footer">
+
         <div class="a_button-footer">
           <h3>Don't Wait! Contact Us Today.</h3>
         </div>
@@ -85,6 +89,11 @@ import "@components/css-components/footer-cta.css";
             <a href="/book">BOOK</a>
           </div>
         </div>
+
+        <div class="c_button-footer">
+          <a target="_blank" href="https://samedayappliance.repair/sitemap.xml">Sitemap</a>
+        </div>
+
       </div>
 
       <div class="address-footer">
