--- a/src/pages/services/commercial-ice-machine-repair-los-angeles.astro
+++ b/src/pages/services/commercial-ice-machine-repair-los-angeles.astro
@@ -23,7 +23,7 @@ import "css/service/style_services.css";
         <div class="page-header-d-full walk-in-cooler-page-header-d-full">
           <div class="page-header-d">
             <h1>
-              <span class="animate-charcter">Ice Machine <br> Repair</span>
+              <span class="animate-charcter">Commercial Ice Machine <br> Repair</span>
             </h1>
             <Contactbtn />
           </div>
