--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -28,8 +28,6 @@ const menuitems = [
       { title: "Wine Cooler Repair", path: "/services/wine-cooler-repair-los-angeles" },
       { title: "Wine Cellar Repair", path: "/services/wine-cellar-repair-los-angeles" },
       { title: "Induction Cooktop Repair", path: "/services/induction-cooktop-repair-los-angeles" },
-      { title: "Furnace Repair", path: "/services/furnace-repair-los-angeles" },
-      { title: "Bar Refrigerator Repair", path: "/services/bar-refrigerator-repair-los-angeles" },
     ],
   },
   {
@@ -46,12 +44,18 @@ const menuitems = [
       {title: "Commercial Walk in Freezer  Repair", path: "/services/commercial-freezer-in-cooler-repair-los-angeles"},
       {title: "Commercial Ice Machine Repair", path: "/services/commercial-ice-machine-repair-los-angeles"},
       {title: "Commercial Slushie Machine Repair", path: "/services/commercial-slushie-machine-repair-los-angeles"},
+      {title: "Commercial Fryer Machine Repair", path: "/services/commercial-fryer-machine-repair-los-angeles"},
+      {title: "Commercial Bar Refrigerator Repair", path: "/services/bar-refrigerator-repair-los-angeles" },
     ],
   },
 
   {
     title: "HVAC Services",
     path: "/services/hvac-repair-los-angeles",
+    children: [
+    { title: "HVAC Repair os Angeles", path: "/services/hvac-repair-los-angeles" },
+    { title: "Furnace Repair", path: "/services/furnace-repair-los-angeles" },
+    ],
   },
 
   {
@@ -63,10 +67,7 @@ const menuitems = [
       { title: "Los Feliz", path: "/areas/los-feliz" },
       { title: "Marina Del Rey", path: "/areas/marina-del-rey" },
       { title: "Santa Monica", path: "/areas/santa-monica" },
-      {
-        title: "Los Angeles County",
-        path: "/areas/los-angeles-and-surrounding-areas",
-      },
+      { title: "Los Angeles County", path: "/areas/los-angeles-and-surrounding-areas"},
     ],
   },
 
