--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -53,7 +53,7 @@ const menuitems = [
     title: "HVAC Services",
     path: "/services/hvac-repair-los-angeles",
     children: [
-    { title: "HVAC Repair os Angeles", path: "/services/hvac-repair-los-angeles" },
+    { title: "HVAC Services", path: "/services/hvac-repair-los-angeles" },
     { title: "Furnace Repair", path: "/services/furnace-repair-los-angeles" },
     ],
   },
