--- a/src/pages/services/commercial-dryer-repair-los-angeles.astro
+++ b/src/pages/services/commercial-dryer-repair-los-angeles.astro
@@ -878,7 +878,7 @@ import "css/service/style_services.css";
                   <img
                     width="300px"
                     height="300px"
-                    src="/brand-logos/uniMac.webp"
+                    src="/brand-logos/unimac.webp"
                     alt="UniMac"
                     loading="lazy"
                   />
