--- a/src/components/reviews.astro
+++ b/src/components/reviews.astro
@@ -6,7 +6,7 @@ import "@components/css-components/reviews.css";
   <div class="reviews-content">
 
     <p>
-      <a href="#reviews"
+      <a href="#reviews" title="reviews"
         ><strong style="font-size: 17px"> Reviews ⭐⭐⭐⭐⭐ 5.0</strong>
         (Google Rating) (Thumbtack Rating)
       </a>
