--- a/src/pages/services/refrigerator-repair-los-angeles.astro
+++ b/src/pages/services/refrigerator-repair-los-angeles.astro
@@ -24,8 +24,7 @@ import "css/service/style_services-test3.css";
           <div class="page-header-d">
             <h1>
               <span class="animate-charcter"
-                >Refrigerator Repair Los Angeles and Nearby Areas</span
-              >
+                >Refrigerator Repair Los Angeles and Nearby Areas</span>
             </h1>
           </div>
         </div>
@@ -33,6 +32,8 @@ import "css/service/style_services-test3.css";
         <div class="page-header-f">
           <div class="page-header-f-rel">
             <img
+              width="800px"
+              height="600px"
               src="/freezer/freezer-page_header_photos.webp"
               alt="Refrigerator Repair Los Angeles?"
               loading="lazy"
