--- a/src/css/service/style_services-test3.css
+++ b/src/css/service/style_services-test3.css
@@ -133,8 +133,6 @@ main {
 }
 
 .page-header-f img {
-    /* width: 65%; */
-
     max-width: 65%;
 }
 
@@ -1621,6 +1619,25 @@ main {
 
 
 
+
+
+
+
+
+
+
+
+
+@media (min-width:1440px) {
+    .page-header-f img {
+        width: 2500px;
+    }
+}
+
+
+
+
+
 @media (max-width:1024px) {
 
     .page-header-p-full {
@@ -1746,6 +1763,7 @@ main {
 @media (max-width:768px) {
 
     .page-header-f img {
+        width: 600px;
         max-width: 100%;
         /* width: 100%; */
     }
@@ -1883,4 +1901,16 @@ main {
         top: -5px;
     }
 
+}
+
+
+
+
+
+
+
+@media (max-width:375px) {
+    .page-header-f img {
+        width: 300px;
+    }
 }
