--- a/src/css/service/style_services-test3.css
+++ b/src/css/service/style_services-test3.css
@@ -1628,11 +1628,11 @@ main {
 
 
 
-@media (min-width:1440px) {
+/* @media (min-width:1440px) {
     .page-header-f img {
         width: 2500px;
     }
-}
+} */
 
 
 
@@ -1760,12 +1760,11 @@ main {
 
 
 
-@media (max-width:768px) {
+@media (max-width:768px) { 
 
     .page-header-f img {
-        width: 600px;
+        /* width: 600px; */
         max-width: 100%;
-        /* width: 100%; */
     }
 
     .page-header-d-full {
@@ -1909,8 +1908,8 @@ main {
 
 
 
-@media (max-width:375px) {
+/* @media (max-width:375px) {
     .page-header-f img {
         width: 300px;
     }
-}
+} */
