--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -46,6 +46,7 @@ const menuitems = [
       {title: "Commercial Slushie Machine Repair", path: "/services/commercial-slushie-machine-repair-los-angeles"},
       {title: "Commercial Fryer Machine Repair", path: "/services/commercial-fryer-machine-repair-los-angeles"},
       {title: "Commercial Bar Refrigerator Repair", path: "/services/bar-refrigerator-repair-los-angeles" },
+      {title: "Commercial Washing Machine Repair", path: "/services/commercial-washing-machine-repair-los-angeles" },
     ],
   },
 
